Updating about/doc pages

--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -23,7 +23,7 @@
       <div id="list-example" class="list-group" style="position: sticky; top: 40px;">
         <a class="list-group-item list-group-item-action" href="#list-about-us">About Us</a>
         <a class="list-group-item list-group-item-action" href="#list-about-project">About the Project</a>
-        <a class="list-group-item list-group-item-action" href="#list-about-geothermal">About the Geothermal Wells</a>
+        <a class="list-group-item list-group-item-action" href="#list-about-geothermal">About the Geothermal System</a>
         <a class="list-group-item list-group-item-action" href="#list-about-data">About the Data Pipeline</a>
       </div>
     </div>
@@ -154,6 +154,7 @@
         <p>
             Carleton's geothermal system is part of <a class="link" href="https://www.carleton.edu/geothermal/" target="_blank"><u>Carleton's utility master plan</u></a>, which includes a goal of being carbon-free in 2050.
             The data on this website pertains to the geothermal system that was spearheaded by the Carleton Aquifer Research Lab (CARL) and installed on campus in 2017-2018.
+            <br><br>
             The geothermal system contains three interconnected borefields which serve to power Carleton's cooling and heating system. These borefields act as a "ground source heat pump" by transferring excess heat to and from Carleton's fluid circulation.
             They are located on the Bald Spot, the Mini-Bald Spot, and Bell Field. The Bald Spot is the largest system
             and it has 134 vertical boreholes that each run 525 feet deep. The Mini-Bald Spot has 77
