--- a/geothermalsite/dashboard/static/css/pages/customquery.css
+++ b/geothermalsite/dashboard/static/css/pages/customquery.css
@@ -8,3 +8,8 @@
     background-color: var(--custom-pink);
     color: white;
 }
+
+.error-message {
+    word-wrap: break-word;
+    max-width: 1130px;
+  }
