--- a/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
@@ -18,6 +18,11 @@ Advanced API: Custom Query
             that option is provided here. You will need to know some SQL to get started. <a class="link" href="https://www.sqltutorial.org/" target="_blank"><u>Here's a good resource</u></a> if you've never
             used SQL before.</p>
 
+        <p>Note that given the size of the database, larger queries can take a while to run. Right now, custom queries are capped at 3000000 results.
+            If you're encountering weird behavior related to the number of retured rows, that could be why. If you need to run a larger query it is best to
+            contact Bruce directly, as queries bigger than the imposed limit here often end up crashing anyway.
+        </p>
+
         <details>
             <summary>Here is the schema diagram for the database</summary>
             <img src="{% static 'img/info/schema.png' %}" alt="Schema diagram for the Geothermal database" style="width:100%">
