--- a/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
@@ -19,7 +19,7 @@ Advanced API: Custom Query
             used SQL before.</p>
 
         <p>Note that given the size of the database, larger queries can take a while to run. Right now, custom queries are capped at 3000000 results.
-            If you're encountering weird behavior related to the number of retured rows, that could be why. If you need to run a larger query it is best to
+            If you're encountering weird behavior related to the number of returned rows, that could be why. If you need to run a larger query it is best to
             contact Bruce directly, as queries bigger than the imposed limit here often end up crashing anyway.
         </p>
 
