--- a/geothermalsite/dashboard/templates/dashboard/components/boreholemap.html
+++ b/geothermalsite/dashboard/templates/dashboard/components/boreholemap.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!-- This file contains code for the borehole map popup -->
-<link rel="stylesheet" href="{% static 'css/boreholemap.css' %}">
+<link rel="stylesheet" href="{% static 'css/components/boreholemap.css' %}">
 <div class="borehole-container inactive">
     <input type="button" class="btn info-btn" value="ⓘ Borehole:">
 
