Updated the tempprofile css reference

--- a/geothermalsite/dashboard/templates/dashboard/graphs/tempprofile.html
+++ b/geothermalsite/dashboard/templates/dashboard/graphs/tempprofile.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'css/tempprofile.css' %}">
+<link rel="stylesheet" href="{% static 'css/graphs/tempprofile.css' %}">
 
 <!-- Graph code and canvas for housing the graph -->
 <script src="{% static 'js/graphs/stratigraphyGraph.js' %}" type="module"></script>
