--- a/geothermalsite/dashboard/templates/dashboard/shared/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/shared/base.html
@@ -35,9 +35,9 @@
     <!-- Google Font icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <!-- Custom site styles -->
-    <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/general/generalSiteStyles.css' %}" />
     <!-- Light/dark mode styles -->
-    <link rel="stylesheet" href="{% static 'css/modeSwitchStyles.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/components/modeSwitchStyles.css' %}" />
     {% endblock %}
 
     <!-- Block to contain all JS files, which can be overwritten/extended in child templates -->
