--- a/geothermalsite/dashboard/templates/dashboard/components/jumbotron.html
+++ b/geothermalsite/dashboard/templates/dashboard/components/jumbotron.html
@@ -2,14 +2,24 @@
 {% load static %}
 
 <div class="jumbotron">
-    <h1 class="display-4">Welcome to GeoDE!</h1>
-    <p class="lead">A Carleton <u>Geo</u>thermal <u>D</u>ata <u>E</u>xplorer developed by the Geothermal CS Comps Team, 2022-23</p>
-    <hr class="my-4">
-    <h2 class="display-5">Disclaimers</h2>
-    <p>Carleton's geothermal database is large and complex! Here are a few things to know:</p>
-    <ul>
-        <li>This database contains many outages, so certain searches may have unexpected contours. <a class="link" href="{% url 'documentation' %}"><u>Find out more about data outages.</u></a></li>
-        <li>This database is big, so searching for data over long periods of time may take a few seconds and up to a few minutes. Please be patient!</li>
-        <li>This is an ongoing project and there are many features we hope are implemented in the future! <a class="link" href="{% url 'about' %}"><u>Read more about future directions.</u></a></li>
-    </ul>
+  <h1 class="display-4">Welcome to GeoDE!</h1>
+  <p class="lead">
+    A Carleton <u>Geo</u>thermal <u>D</u>ata <u>E</u>xplorer developed by the Geothermal CS Comps Team, 2022-23
+  </p>
+  <hr class="my-4"/>
+  <h2 class="display-5">Disclaimers</h2>
+  <p>Carleton's geothermal database is large and complex! Here are a few things to know:</p>
+  <ul>
+    <li>
+      This database contains many outages, so certain searches may have unexpected contours. <a class="link"
+    href="{% url 'documentation' %}"><u>Find out more about data outages.</u></a>
+    </li>
+    <li>
+      This database is big, so searching for data over long periods of time may take a few seconds and up to a few minutes. Please be patient!
+    </li>
+    <li>
+      This is an ongoing project and there are many features we hope are implemented in the future! <a class="link"
+    href="{% url 'about' %}"><u>Read more about future directions.</u></a>
+    </li>
+  </ul>
 </div>
