--- a/geothermalsite/dashboard/templates/dashboard/graphs/tempvsdepth.html
+++ b/geothermalsite/dashboard/templates/dashboard/graphs/tempvsdepth.html
@@ -1,15 +1,21 @@
 {% load static %}
 
 <!-- Graph code and canvas for housing the graph -->
-<script src="{% static 'js/graphs/tempVsDepthGraph.js' %}" type="module"></script>
+<script src="{% static 'js/graphs/tempVsDepthGraph.js' %}"
+        type="module"></script>
 <div class="container">
-    <div class="viewer">
-        <div style="margin-bottom: 1ch;">
-            <!-- Buttons for downloading the data as a CSV and the graph as an image -->
-            <script src="{% static 'js/utils/downloadCsv.js' %}"></script>
-            <button class="btn btn-secondary submit-button" onclick="downloadData('temp_vs_depth')">Download data</button>
-            <button class="btn btn-secondary submit-button" id="downloadImage" onclick="window.downloadGraphImage('temp_vs_depth')">Download graph</button>
-        </div>
-    <canvas id="ctx"></canvas>
+  <div class="viewer">
+    <div style="margin-bottom: 1ch">
+      <!-- Buttons for downloading the data as a CSV and the graph as an image -->
+      <script src="{% static 'js/utils/downloadCsv.js' %}"></script>
+      <button class="btn btn-secondary submit-button"
+              onclick="downloadData('temp_vs_depth')">Download data</button>
+      <button class="btn btn-secondary submit-button"
+              id="downloadImage"
+              onclick="window.downloadGraphImage('temp_vs_depth')">
+        Download graph
+      </button>
     </div>
+    <canvas id="ctx"></canvas>
+  </div>
 </div>
