--- a/geothermalsite/dashboard/static/css/components/navbar.css
+++ b/geothermalsite/dashboard/static/css/components/navbar.css
@@ -1,9 +1,11 @@
-.navbar .navbar-nav .nav-link, .navbar-brand {
+.navbar .navbar-nav .nav-link,
+.navbar-brand {
     color: var(--primary-text-color);
     font-size: 25px;
 }
 
-.navbar .navbar-nav .nav-link:hover, .navbar-brand:hover {
+.navbar .navbar-nav .nav-link:hover,
+.navbar-brand:hover {
     color: var(--secondary-text-color);
     font-size: 25px;
 }
