--- a/geothermalsite/dashboard/static/css/pages/about.css
+++ b/geothermalsite/dashboard/static/css/pages/about.css
@@ -29,9 +29,9 @@ img {
 
 /* Display the columns below each other instead of side by side on small screens */
 @media screen and (max-width: 650px) {
-.column {
-    width: 100%;
-    display: block;
+    .column {
+        width: 100%;
+        display: block;
     }
 }
 
@@ -41,7 +41,8 @@ img {
 }
 
 /* Clear floats */
-.container::after, .row::after {
+.container::after,
+.row::after {
     content: "";
     clear: both;
     display: table;
@@ -89,7 +90,8 @@ img {
     margin-bottom: 0%;
 }
 
-.fab, .fas {
+.fab,
+.fas {
     font-size: 26px;
     margin-left: 10px;
     margin-right: 10px;
