custom query styling

--- a/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
@@ -26,7 +26,7 @@
           used SQL before.
         </p>
         <p>
-          Note that given the size of the database, larger queries can take a while to run. Right now, custom queries are capped at 500000 results.
+          Note that given the size of the database, larger queries can take a while to run. Right now, custom queries are capped at 500,000 rows.
           If you're encountering weird behavior related to the number of returned rows, that could be why. If you need to run a larger query it is best to
           contact Bruce directly, as queries bigger than the imposed limit here often end up crashing anyway.
         </p>
