--- a/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
@@ -95,6 +95,9 @@
             <!-- Body rows will be added dynamically -->
           </tbody>
         </table>
+        <h6 id="num-results">
+          <!-- displayed dynamically -->
+        </h6>
         <script>
           var queryResults = {
             {
@@ -105,6 +108,7 @@
           // Get a reference to the table header and body
           var tableHeader = document.getElementById("table-header");
           var tableBody = document.getElementById("table-body");
+          var numResults = document.getElementById("num-results");
           var upperlimit = Math.min(10, queryResults.length);
           // Loop through the data and add rows to the table
           for (var i = 0; i < upperlimit; i++) {
@@ -121,30 +125,36 @@
               cell.innerHTML = queryResults[i][key];
             }
           }
+          numResults.innerHTML = ''.concat("Displaying ", upperlimit, " out of ", queryResults.length, " results")
         </script>
 
         {% if queryResults|length > 10 %}
           <input type="button"
                  class="btn see-all-data"
-                 value="See all"/>
+                 value="See more"/>
           <script>
             $(document).ready(function() {
               $(".btn.see-all-data").click(function() {
-                if ($(this).val() == "See all") {
-                  for (var i = 10; i < queryResults.length; i++) {
+                var numResults = document.getElementById("num-results");
+                var upperlimit = Math.min(25, queryResults.length)
+                if ($(this).val() == "See more") {
+                  for (var i = 10; i < upperlimit; i++) {
                     var row = tableBody.insertRow(i);
                     for (var key in queryResults[i]) {
                       var cell = row.insertCell();
                       cell.innerHTML = queryResults[i][key];
                     }
                   }
+                  numResults.innerHTML = ''.concat("Displaying ", upperlimit, " out of ", queryResults.length, " results")
+
                 } else {
-                  for (var i = 10; i < queryResults.length; i++) {
+                  for (var i = 10; i < upperlimit; i++) {
                     var row = tableBody.deleteRow(10);
 
                   }
+                  numResults.innerHTML = ''.concat("Displaying 10 out of ", queryResults.length, " results")
                 }
-                $(this).val() == "See all" ? $(this).val("See less") : $(this).val("See all")
+                $(this).val() == "See more" ? $(this).val("See less") : $(this).val("See more")
               });
 
             });
@@ -153,7 +163,7 @@
 
         {% comment %}
             {% if queryResults|length > 10 %}
-                <input type="button" class="btn info-btn" value="see all">
+                <input type="button" class="btn info-btn" value="see more">
 
                 <details>
                     <summary>View all data</summary>
