--- a/geothermalsite/dashboard/static/css/components/backToTopButton.css
+++ b/geothermalsite/dashboard/static/css/components/backToTopButton.css
@@ -6,4 +6,11 @@
     border-radius: 50%;
     width: 40px;
     height: 40px;
+    color: white;
+    background-color: var(--primary-button-color);
+    outline-color: var(--primary-button-color);
+}
+
+.fa-arrow-up {
+    font-size: 20px;
 }
