removed scrollspy implementation

--- a/geothermalsite/dashboard/templates/dashboard/pages/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/pages/about.html
@@ -25,7 +25,7 @@
              class="list-group"
              style="position: sticky;
                     top: 40px">
-          <a class="list-group-item list-group-item-action"
+          <a class="list-group-item list-group-item-action active"
              href="#list-about-us">About Us</a>
           <a class="list-group-item list-group-item-action"
              href="#list-about-project">About the Project</a>
@@ -36,10 +36,6 @@
         </div>
       </div>
       <div class="col-10">
-        <div data-spy="scroll"
-             data-target="#list-example"
-             data-offset="0"
-             class="scrollspy-example">
           <h4 id="list-about-us">About Us</h4>
           <p>We are the 2022-2023 Geothermal comps team!</p>
           {# meet the team section #}
@@ -224,7 +220,6 @@
                href="mailto:bduffy@carleton.edu"><u>contact Bruce Duffy</u>
             </a>.
           </p>
-        </div>
       </div>
     </div>
   </div>
