fixed typo in doctype declaration

--- a/geothermalsite/dashboard/templates/dashboard/shared/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/shared/base.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html/>
-<html lang="en"/>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport"
@@ -101,3 +101,4 @@
   {% include "dashboard/components/backToTopButton.html" %}
   {% include "dashboard/shared/footer.html" %}
 </body>
+</html>
