--- a/geothermalsite/dashboard/templates/dashboard/shared/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/shared/navbar.html
@@ -6,7 +6,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary"
      id="main-navbar">
   <div class="container-fluid">
-    <a class="navbar-brand mb-0 h1 font-weight-bold"
+    <a class="navbar-brand px-2 py-2 mb-0 h1 font-weight-bold"
        href="{% url 'index' %}">Carleton GeoDE</a>
     <button class="navbar-toggler"
             type="button"
