--- a/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/pages/customquery.html
@@ -34,7 +34,7 @@
           <summary>
             Here is the schema diagram for the database
           </summary>
-          <img src="{% static 'img/info/schema.png' %}"
+          <img src="{% static 'img/info/schema_updated.png' %}"
                alt="Schema diagram for the Geothermal database"
                style="width:100%"/>
         </details>
